--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
+    "animate.css": "^4.1.1",
     "framer-motion": "^11.11.11",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
