--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "animate.css": "^4.1.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
