Added txt file for validation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^8.1.4",
     "animate.css": "^4.1.1",
     "next": "15.0.2",
+    "node-mailjet": "^6.0.6",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "swiper": "^11.1.14"
